# drovah

./: .dockerignore  .drovah  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  drovah.sql  example-payload.json  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2021-01-14-064350_create_builds/: down.sql
backend/src/: lib.rs  models.rs  routes.rs
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Project.vue  ProjectModal.vue
migrations/2021-01-14-064337_create_projects/: up.sql
migrations/2021-01-14-064350_create_builds/: up.sql
src/: database_connection.rs  lib.rs  main.rs  routes.rs  schema.rs
static/: index.html  package-lock.json  package.json
static/css/: styles.css
static/js/: scripts.js  vueApp.js
static/public/: index.html
static/src/: App.vue  main.js
static/src/components/: Project.vue  ProjectModal.vue
