[package]
name = "drovah"
version = "0.1.0-alpha"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
actix-files = "0.3.0"
actix-rt = "1.1.1"
futures = "0.3"
serde_json = "1.0"
badge = "0.3.0"
mongodb = "1.1.1"
tokio = "0.2.22"
env_logger = "0.7.1"
bson = "1.1.0"
