[package]
name = "drovah"
version = "0.1.0-beta"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
actix-files = "0.5.0"
actix-rt = "1.1.1"
futures = "0.3"
serde_json = "1.0"
badge = "0.3.0"
mongodb = "1.1.1"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.8.1"
bson = "1.1.0"
hmac = "0.10"
sha-1 = "0.9"
hex = "0.4"
