[package]
name = "drovah"
version = "0.1.0-beta"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-rt = "2.1.0"
futures = "0.3"
serde_json = "1.0"
badge = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.8.1"
hmac = "0.10"
sha-1 = "0.9"
hex = "0.4"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
