[package]
name = "drovah"
version = "0.1.0-beta"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
actix-web = "3"
actix-files = "0.5"
futures = "0.3"
serde_json = "1"
badge = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.8"
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
